# property_driven_design

./: CMakeLists.txt  LICENSE  README.md
01_minmax/: minmax.catch.test.cpp  minmax.hpp  minmax.test.cpp
